--- a/assets/css/clima.css
+++ b/assets/css/clima.css
@@ -66,3 +66,26 @@ h1{
     color: white;
     font-size: 55px;
 }
+
+.ciudad_boton-volver {
+    display: inline-block;
+    font-weight: 500;
+    justify-self: center;
+    align-items: center;
+    text-align: center;
+    vertical-align: middle;
+    color: #fff;
+    border: 1px solid transparent;
+    padding: 1rem 1rem;
+    font-size: 1rem;
+    line-height: 1.5;
+    min-width: 11.375rem;
+    height: 3.75rem;
+    border-radius: 3px;
+    background-color:  #1F92BF;
+    border-color:  #1F92BF;
+    text-transform: none;
+    margin: 0;
+    font-family: inherit;
+    text-decoration: none;
+}
