--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -855,7 +855,7 @@ body {
     line-height: 1.5;
     min-width: 11.375rem;
     height: 3.75rem;
-    border-radius: 3px !important;
+    border-radius: 3px;
     background-color: #297cbb;
     border-color: #297cbb;
     text-transform: none;
@@ -869,8 +869,8 @@ body {
 /*------------------------FOOTER------------------------- */
 .containter__footer {
     display: block;
-    padding-bottom: 2rem !important;
-    padding-top: 2rem !important;
+    padding-bottom: 2rem ;
+    padding-top: 2rem;
     background-color: #297cbb;
     margin-top: 2rem;
 }
