--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -107,8 +107,8 @@ body {
 .header_main__navBar-li-a {
     display: block;
     padding-left: 0;
-    padding-top: 0.5rem !important;
-    padding-bottom: 0.5rem !important;
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
     padding-right: 1rem;
     color: #3b444f;
     position: relative;
@@ -139,9 +139,9 @@ body {
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
-    padding-top: 12.5rem !important;
-    text-align: center !important;
-    position: relative !important;
+    padding-top: 12.5rem;
+    text-align: center;
+    position: relative;
     box-sizing: border-box;
 }
 
@@ -157,7 +157,7 @@ body {
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
-    height: 100% !important;
+    height: 100%;
 }
 
 .hero__container__background_video {
@@ -186,16 +186,16 @@ body {
 
 .hero__container_title {
     display: block;
-    margin-top: 1.5rem !important;
-    padding-bottom: 5rem !important;
+    margin-top: 1.5rem;
+    padding-bottom: 5rem;
 }
 
 .hero__container_h1 {
     display: block;
-    font-weight: 500 !important;
+    font-weight: 500;
     font-size: 3.75rem;
-    color: #fff !important;
-    position: relative !important;
+    color: #fff;
+    position: relative;
     margin-bottom: 0.5rem;
     line-height: 1.5;
     margin-top: 0;
@@ -208,8 +208,8 @@ body {
 
 .hero__container_options {
     display: block;
-    padding-bottom: 2.5rem !important;
-    padding-top: 1rem !important;
+    padding-bottom: 2.5rem;
+    padding-top: 1rem;
 
 
 }
@@ -218,10 +218,10 @@ body {
     display: flex;
     overflow-x: auto;
     overflow-y: hidden;
-    padding-bottom: 1.5rem !important;
-    padding-top: 0.5rem !important;
-    justify-content: center !important;
-    flex-wrap: nowrap !important;
+    padding-bottom: 1.5rem;
+    padding-top: 0.5rem;
+    justify-content: center;
+    flex-wrap: nowrap;
     padding-left: 0;
     margin-bottom: 0;
     list-style: none;
@@ -241,8 +241,8 @@ body {
     background-color: #408fb9; */
     border-radius: 3px;
     padding: .3rem 1.5rem;
-    font-weight: 500 !important;
-    position: relative !important;
+    font-weight: 500;
+    position: relative;
     color: #297cbb;
     text-decoration: none;
 
@@ -255,17 +255,17 @@ body {
 
 
 .hero__container_a {
-    display: flex !important;
-    color: #fff !important;
-    position: relative !important;
-    flex-direction: row !important;
-    align-items: center !important;
+    display: flex;
+    color: #fff;
+    position: relative;
+    flex-direction: row;
+    align-items: center;
 
 }
 
 .hero__container_a_fig {
-    margin-right: 1rem !important;
-    display: block !important;
+    margin-right: 1rem;
+    display: block;
     margin-bottom: 0;
     margin: 0 0 1rem;
     margin-block-start: 1em;
@@ -282,8 +282,8 @@ body {
 }
 
 .hero__conainter_a_span {
-    font-weight: 500 !important;
-    margin-top: 0 !important;
+    font-weight: 500;
+    margin-top: 0;
 
 }
 
@@ -324,7 +324,7 @@ body {
 
 .sel {
     color: #3b444f;
-    background-color: #fff !important;
+    background-color: #fff;
     border: 0;
     font-weight: 500;
     padding-bottom: 14px;
@@ -344,16 +344,14 @@ body {
 
 
 
-
-
 .paraAbajo {
     border-color: #eaeaea;
-    border-bottom: 1px solid #e7eaf3 !important;
+    border-bottom: 1px solid #e7eaf3;
     font-weight: normal;
     white-space: nowrap;
     min-height: 1.2em;
     padding: 0px 2px 1px;
-    color: #297cbb !important;
+    color: #297cbb;
     word-wrap: normal;
     text-transform: none;
     margin: 0;
@@ -364,18 +362,15 @@ body {
 
 
 
-
-
-
 /*BLOQUES INFO*/
 
 .container__info {
     display: block;
     border-color: #ebf0f7;
-    padding-top: 1.5rem !important;
-    padding-bottom: 0.5rem !important;
-    margin-top: 0.25rem !important;
-    border-bottom: 1px solid #e7eaf3 !important;
+    padding-top: 1.5rem;
+    padding-bottom: 0.5rem;
+    margin-top: 0.25rem;
+    border-bottom: 1px solid #e7eaf3;
 }
 
 .container__info_main {
@@ -412,9 +407,9 @@ body {
 .icon::before {
     line-height: 1;
     font-size: 3.125rem;
-    color: #297cbb !important;
-    margin-bottom: 1rem !important;
-    margin-right: 1rem !important;
+    color: #297cbb;
+    margin-bottom: 1rem;
+    margin-right: 1rem;
     font-style: normal;
 
 }
@@ -428,10 +423,10 @@ body {
 
 .container__info_main-h5 {
     display: block;
-    font-weight: 500 !important;
+    font-weight: 500;
     font-size: 1.188rem;
-    color: #3b444f !important;
-    margin-bottom: 0.25rem !important;
+    color: #3b444f;
+    margin-bottom: 0.25rem;
     line-height: 1.5;
     margin-top: 0;
     margin-block-start: 1.67em;
@@ -447,7 +442,7 @@ body {
     margin-inline-start: 0px;
     margin-inline-end: 0px;
     line-height: 1.5;
-    color: #67747c !important;
+    color: #67747c;
     margin-top: 0;
     margin-bottom: 1rem
 }
@@ -462,8 +457,8 @@ body {
 
 .container_destinos_main {
     display: block;
-    padding-bottom: 2rem !important;
-    padding-top: 2rem !important;
+    padding-bottom: 2rem;
+    padding-top: 2rem;
     max-width: 960px;
     width: 100%;
     padding-right: 15px;
@@ -473,12 +468,12 @@ body {
 }
 
 .container_destinos_titulo {
-    width: 50% !important;
-    text-align: center !important;
-    margin-left: auto !important;
-    margin-right: auto !important;
-    margin-bottom: 2rem !important;
-    margin-top: 1rem !important;
+    width: 50%;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 2rem;
+    margin-top: 1rem;
 }
 
 
@@ -487,15 +482,15 @@ body {
     display: block;
     color: #3b444f;
     font-size: 1.875rem;
-    font-weight: 500 !important;
-    margin-bottom: 0 !important;
+    font-weight: 500;
+    margin-bottom: 0;
     line-height: 1.5;
     margin-top: 0;
     margin-block-start: 0.83em;
     margin-block-end: 0.83em;
     margin-inline-start: 0px;
     margin-inline-end: 0px;
-    text-align: center !important;
+    text-align: center;
 }
 
 .section-title::after {
@@ -521,7 +516,7 @@ body {
     width: 100%;
     padding-right: 15px;
     padding-left: 15px;
-    margin-bottom: 1.5rem !important;
+    margin-bottom: 1.5rem;
     flex: 0 0 50%;
     max-width: 50%;
 }
@@ -530,13 +525,13 @@ body {
     display: block;
     /* background-image: url(https://i3.visitchile.com/img/Zone/1/desierto_atacama.jpg); */
     transition: all .2s ease-in-out;
-    min-height: 21.875rem !important;
+    min-height: 21.875rem;
     border-radius: 0.188rem;
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
-    padding: 2rem !important;
-    border: 0 !important;
+    padding: 2rem ;
+    border: 0;
     position: relative;
 }
 
@@ -550,20 +545,20 @@ body {
 
 .container_destinos_info-pos {
     display: block;
-    position: relative !important;
+    position: relative;
 }
 
 .container_destinos_info-a {
     display: block;
-    font-weight: 500 !important;
+    font-weight: 500;
     background: #297cbb;
-    padding: 3px 10px !important;
-    width: auto !important;
+    padding: 3px 10px ;
+    width: auto;
     line-height: 31px;
     font-size: 1.313rem;
     position: relative;
-    color: #fff !important;
-    margin-bottom: 1rem !important;
+    color: #fff;
+    margin-bottom: 1rem;
     text-decoration: none;
     cursor: pointer;
     border: none;
@@ -596,8 +591,8 @@ body {
     display: block;
     width: 100%;
     font-size: 1rem;
-    padding-left: 0 !important;
-    padding-right: 0 !important;
+    padding-left: 0 ;
+    padding-right: 0 ;
     color: #fff;
     padding: 0.375rem 1.5rem;
     clear: both;
@@ -610,7 +605,6 @@ body {
 
 }
 
-.dropdown a:hover {}
 
 .show {
     display: block;
@@ -624,17 +618,17 @@ body {
     min-width: 992px;
     min-height: 600px;
     display: block;
-    padding-top: 12.5rem !important;
+    padding-top: 12.5rem;
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
     /* background-image: url(https://i4.visitchile.com/img/Banner/16/main.png); */
-    padding-bottom: 8rem !important;
+    padding-bottom: 8rem ;
 }
 
 .container__video_info {
     display: block;
-    text-align: center !important;
+    text-align: center;
 }
 
 .video_info-1 {
@@ -653,7 +647,7 @@ body {
 
 .video_info-2 {
     display: block;
-    font-weight: 500 !important;
+    font-weight: 500;
     font-size: 1.313rem;
     margin-bottom: 2rem;
     line-height: 1.5;
@@ -686,8 +680,8 @@ body {
     font-size: 1rem;
     border-radius: 50%;
     transition: all .3s ease-in-out;
-    color: #fff !important;
-    background-color: transparent !important;
+    color: #fff;
+    background-color: transparent;
     cursor: pointer;
 }
 
@@ -730,7 +724,7 @@ body {
     font-size: 1.3rem;
     height: 54px;
     min-width: 7rem;
-    border-radius: 3px !important;
+    border-radius: 3px;
     color: white;
     display: inline-block;
     font-weight: 500;
@@ -829,7 +823,7 @@ body {
     width: 50%;
     height: 40rem;
     object-fit: cover;
-    order-style: none;
+
 }
 
 .ciudad_parrafo {
@@ -891,9 +885,9 @@ body {
 
 
 .container__main_centrado {
-    display: block !important;
-    align-items: center !important;
-    justify-content: space-between !important;
+    display: block;
+    align-items: center;
+    justify-content: space-between;
 }
 
 
