--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -117,6 +117,11 @@ body {
     background-color: transparent;
 
 }
+.header_main__navBar-li-a:hover{
+    color: #408fb9;
+transition: 1.5s;
+
+}
 
 
 
@@ -247,6 +252,12 @@ body {
     text-decoration: none;
 
 }
+.hero__container_options_ul-li-a:hover {
+    border: 1px solid #408fb9;
+    background-color: #408fb9;
+    transition: 1s;
+}
+
 
 .hero__container_options_ul-li-a:focus {
     border: 1px solid #408fb9;
@@ -286,6 +297,9 @@ body {
     margin-top: 0;
 
 }
+
+
+
 
 .hero__container_search {
     position: relative;
